fix horizontal scroll

--- a/src/components/common/TwoPaneLayout.less
+++ b/src/components/common/TwoPaneLayout.less
@@ -4,8 +4,8 @@
   .side-menu {
     padding-top: 30px;
     height: calc(~"100vh - " @headerHeight);
-    overflow-x: scroll;
-    overflow-y: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     background-color: @textBlue;
     .svg-inline--fa{
       margin-right: 15px;
